--- a/weather.html.html
+++ b/weather.html.html
@@ -20,8 +20,11 @@
         </div>
     <div class="author-info">
         <h2 class="weather-description"></h2>
-        <p class="made-by">Made by AnonymousAlabi with DarkSky WEATHER API.</p>
+        <p class="made-by">Made by AnonymousAlabi with DarkSky weather API.</p>
     </div>
+    <small class="font-weight-light">
+        Click the temperature value above to change the from Celcius to Fahrenheit scale
+    </small>
 
 
     <script src="skycons.js"></script>
