--- a/weather.html
+++ b/weather.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <link type="text/css" rel="stylesheet" href="style.css" />
+        <link type="text/css" rel="stylesheet" href="weather.css" />
         <title>Weather App</title>
         <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     </head>
